--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -574,6 +574,46 @@ video {
   inset: 2.5rem;
 }
 
+.inset-0{
+  inset: 0px;
+}
+
+.inset-36{
+  inset: 9rem;
+}
+
+.inset-\[\]{
+  inset: ;
+}
+
+.inset-\[15\%\]{
+  inset: 15%;
+}
+
+.inset-\[15\%_10\%\]{
+  inset: 15% 10%;
+}
+
+.inset-\[15\%_10\%_auto\]{
+  inset: 15% 10% auto;
+}
+
+.inset-\[15\%_10\%_auto_auto\]{
+  inset: 15% 10% auto auto;
+}
+
+.inset-\[15vw_10\%_auto_auto\]{
+  inset: 15vw 10% auto auto;
+}
+
+.inset-\[15\%_10vw_auto_auto\]{
+  inset: 15% 10vw auto auto;
+}
+
+.inset-\[0_auto_auto_15\]{
+  inset: 0 auto auto 15;
+}
+
 .inset-y-1{
   top: 0.25rem;
   bottom: 0.25rem;
@@ -617,16 +657,32 @@ video {
   margin-left: 1.25rem;
 }
 
-.mr-5{
-  margin-right: 1.25rem;
-}
-
 .ml-8{
   margin-left: 2rem;
 }
 
 .ml-\[15\%\]{
   margin-left: 15%;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
+.mr-10{
+  margin-right: 2.5rem;
+}
+
+.mr-5{
+  margin-right: 1.25rem;
+}
+
+.mr-8{
+  margin-right: 2rem;
+}
+
+.ml-10{
+  margin-left: 2.5rem;
 }
 
 .block{
@@ -661,16 +717,8 @@ video {
   display: none;
 }
 
-.aspect-\[34\/55\]{
-  aspect-ratio: 34/55;
-}
-
 .aspect-square{
   aspect-ratio: 1 / 1;
-}
-
-.aspect-\[250\/311\]{
-  aspect-ratio: 250/311;
 }
 
 .h-1{
@@ -694,12 +742,32 @@ video {
   height: 100vh;
 }
 
+.h-1\/2{
+  height: 50%;
+}
+
+.h-\[25px\]{
+  height: 25px;
+}
+
+.h-\[100px\]{
+  height: 100px;
+}
+
+.h-\[50px\]{
+  height: 50px;
+}
+
 .w-0{
   width: 0px;
 }
 
-.w-\[15\%\]{
-  width: 15%;
+.w-1{
+  width: 0.25rem;
+}
+
+.w-1\/2{
+  width: 50%;
 }
 
 .w-\[50px\]{
@@ -723,6 +791,34 @@ video {
   width: 100vw;
 }
 
+.w-\[15\%\]{
+  width: 15%;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-\[36\%\]{
+  width: 36%;
+}
+
+.w-\[33vw\]{
+  width: 33vw;
+}
+
+.w-\[36vw\]{
+  width: 36vw;
+}
+
+.w-\[25px\]{
+  width: 25px;
+}
+
+.w-\[100px\]{
+  width: 100px;
+}
+
 .border-collapse{
   border-collapse: collapse;
 }
@@ -734,6 +830,17 @@ video {
 
 .translate-y-1{
   --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-5{
+  --tw-translate-x: 1.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-110{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -775,6 +882,10 @@ video {
 
 .gap-4{
   gap: 1rem;
+}
+
+.gap-5{
+  gap: 1.25rem;
 }
 
 .self-start{
@@ -829,17 +940,21 @@ video {
   border-width: 2px;
 }
 
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
+.border-t-2{
+  border-top-width: 2px;
+}
+
 .border-primary{
   --tw-border-opacity: 1;
   border-color: rgb(116 47 133 / var(--tw-border-opacity));
-}
-
-.border-\[2px_solid\]{
-  border-color: 2px solid;
-}
-
-.border-\[2px_solid_\#742F85\]{
-  border-color: 2px solid #742F85;
 }
 
 .bg-accent{
@@ -857,13 +972,13 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.bg-transparent{
+  background-color: transparent;
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-transparent{
-  background-color: transparent;
 }
 
 .bg-opacity-50{
@@ -884,17 +999,45 @@ video {
   padding-bottom: 2.5rem;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
 .pl-\[15\%\]{
   padding-left: 15%;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .pt-\[30\%\]{
   padding-top: 30%;
 }
 
+.pl-\[15vw\]{
+  padding-left: 15vw;
+}
+
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .text-6xl{
@@ -930,18 +1073,22 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-secondary{
+  --tw-text-opacity: 1;
+  color: rgb(188 80 214 / var(--tw-text-opacity));
+}
+
+.text-primary{
+  --tw-text-opacity: 1;
+  color: rgb(116 47 133 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
 
 .opacity-50{
   opacity: 0.5;
-}
-
-.shadow-\[0px_0px_16px_0px_\#7A3F88\]{
-  --tw-shadow: 0px 0px 16px 0px #7A3F88;
-  --tw-shadow-colored: 0px 0px 16px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-primary{
@@ -983,7 +1130,7 @@ body {
 #root {
   background: linear-gradient(
       to top right,
-      rgba(109, 10, 133, 0.1) 0%,
+      rgba(109, 10, 133, 0.2) 0%,
       rgba(0, 0, 0, 0) 100%
     )
     no-repeat;
@@ -1018,10 +1165,6 @@ body {
   background: #818181;
 } */
 
-.first\:ml-0:first-child{
-  margin-left: 0px;
-}
-
-.last\:mr-10:last-child{
-  margin-right: 2.5rem;
+.first\:border-t:first-child{
+  border-top-width: 1px;
 }
