--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -570,48 +570,40 @@ video {
   position: sticky;
 }
 
-.inset-10{
-  inset: 2.5rem;
-}
-
 .inset-0{
   inset: 0px;
+}
+
+.inset-10{
+  inset: 2.5rem;
 }
 
 .inset-36{
   inset: 9rem;
 }
 
-.inset-\[\]{
-  inset: ;
-}
-
-.inset-\[15\%\]{
-  inset: 15%;
-}
-
-.inset-\[15\%_10\%\]{
-  inset: 15% 10%;
-}
-
-.inset-\[15\%_10\%_auto\]{
-  inset: 15% 10% auto;
-}
-
-.inset-\[15\%_10\%_auto_auto\]{
-  inset: 15% 10% auto auto;
-}
-
-.inset-\[15vw_10\%_auto_auto\]{
-  inset: 15vw 10% auto auto;
-}
-
 .inset-\[15\%_10vw_auto_auto\]{
   inset: 15% 10vw auto auto;
 }
 
-.inset-\[0_auto_auto_15\]{
-  inset: 0 auto auto 15;
+.inset-\[15\%_5vw_auto_auto\]{
+  inset: 15% 5vw auto auto;
+}
+
+.inset-\[30\%_auto_auto_15vw\]{
+  inset: 30% auto auto 15vw;
+}
+
+.inset-\[30vh_auto_auto_15vw\]{
+  inset: 30vh auto auto 15vw;
+}
+
+.inset-\[70vh_auto_auto_15vw\]{
+  inset: 70vh auto auto 15vw;
+}
+
+.inset-\[50vh_auto_auto_15vw\]{
+  inset: 50vh auto auto 15vw;
 }
 
 .inset-y-1{
@@ -631,12 +623,20 @@ video {
   top: 0.25rem;
 }
 
+.z-10{
+  z-index: 10;
+}
+
 .row-start-2{
   grid-row-start: 2;
 }
 
 .row-start-3{
   grid-row-start: 3;
+}
+
+.m-1{
+  margin: 0.25rem;
 }
 
 .my-10{
@@ -651,6 +651,10 @@ video {
 
 .mb-auto{
   margin-bottom: auto;
+}
+
+.ml-10{
+  margin-left: 2.5rem;
 }
 
 .ml-5{
@@ -679,10 +683,6 @@ video {
 
 .mr-8{
   margin-right: 2rem;
-}
-
-.ml-10{
-  margin-left: 2.5rem;
 }
 
 .block{
@@ -725,6 +725,10 @@ video {
   height: 0.25rem;
 }
 
+.h-1\/2{
+  height: 50%;
+}
+
 .h-\[60px\]{
   height: 60px;
 }
@@ -742,20 +746,12 @@ video {
   height: 100vh;
 }
 
-.h-1\/2{
-  height: 50%;
-}
-
 .h-\[25px\]{
   height: 25px;
 }
 
-.h-\[100px\]{
-  height: 100px;
-}
-
-.h-\[50px\]{
-  height: 50px;
+.h-1\/3{
+  height: 33.333333%;
 }
 
 .w-0{
@@ -770,12 +766,20 @@ video {
   width: 50%;
 }
 
+.w-\[33vw\]{
+  width: 33vw;
+}
+
+.w-\[36vw\]{
+  width: 36vw;
+}
+
 .w-\[50px\]{
   width: 50px;
 }
 
-.w-\[600px\]{
-  width: 600px;
+.w-\[90\%\]{
+  width: 90%;
 }
 
 .w-fit{
@@ -791,32 +795,20 @@ video {
   width: 100vw;
 }
 
-.w-\[15\%\]{
-  width: 15%;
+.w-\[50vw\]{
+  width: 50vw;
 }
 
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.w-\[36\%\]{
-  width: 36%;
-}
-
-.w-\[33vw\]{
-  width: 33vw;
-}
-
-.w-\[36vw\]{
-  width: 36vw;
+.w-\[75px\]{
+  width: 75px;
 }
 
 .w-\[25px\]{
   width: 25px;
 }
 
-.w-\[100px\]{
-  width: 100px;
+.w-\[60vw\]{
+  width: 60vw;
 }
 
 .border-collapse{
@@ -828,13 +820,13 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-1{
-  --tw-translate-y: 0.25rem;
+.translate-x-5{
+  --tw-translate-x: 1.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-5{
-  --tw-translate-x: 1.25rem;
+.translate-y-1{
+  --tw-translate-y: 0.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -852,12 +844,28 @@ video {
   resize: both;
 }
 
+.grid-cols-12{
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.grid-cols-\[repeat\(12\2c _minmax\(0\2c _1fr\)\)\]{
+  grid-template-columns: repeat(12, minmax(0, 1fr));
+}
+
+.grid-cols-\[repeat\(15\2c _minmax\(0\2c _1fr\)\)\]{
+  grid-template-columns: repeat(15, minmax(0, 1fr));
+}
+
 .grid-rows-3{
   grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .flex-col{
   flex-direction: column;
+}
+
+.place-items-center{
+  place-items: center;
 }
 
 .items-center{
@@ -932,6 +940,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -981,12 +993,141 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-secondary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(188 80 214 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#131313\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 19 19 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#d9d9d9\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(217 217 217 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#d1d1d1\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 209 209 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#131518\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(19 21 24 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
 }
 
+.fill-\[\#00979D\]{
+  fill: #00979D;
+}
+
+.fill-\[\#00599C\]{
+  fill: #00599C;
+}
+
+.fill-\[\#239120\]{
+  fill: #239120;
+}
+
+.fill-\[\#1572B6\]{
+  fill: #1572B6;
+}
+
+.fill-\[\#092E20\]{
+  fill: #092E20;
+}
+
+.fill-\[\#000020\]{
+  fill: #000020;
+}
+
+.fill-\[\#2496ED\]{
+  fill: #2496ED;
+}
+
+.fill-\[\#F05032\]{
+  fill: #F05032;
+}
+
+.fill-\[\#181717\]{
+  fill: #181717;
+}
+
+.fill-\[\#61DAFB\]{
+  fill: #61DAFB;
+}
+
+.fill-\[\#000000\]{
+  fill: #000000;
+}
+
+.fill-\[\#003B57\]{
+  fill: #003B57;
+}
+
+.fill-\[\#007ACC\]{
+  fill: #007ACC;
+}
+
+.fill-\[\#1F1E1E\]{
+  fill: #1F1E1E;
+}
+
+.fill-\[\#22314E\]{
+  fill: #22314E;
+}
+
+.fill-\[\#336791\]{
+  fill: #336791;
+}
+
+.fill-\[\#3776AB\]{
+  fill: #3776AB;
+}
+
+.fill-\[\#38B2AC\]{
+  fill: #38B2AC;
+}
+
+.fill-\[\#41CD52\]{
+  fill: #41CD52;
+}
+
+.fill-\[\#5C3EE8\]{
+  fill: #5C3EE8;
+}
+
+.fill-\[\#E10098\]{
+  fill: #E10098;
+}
+
+.fill-\[\#E34F26\]{
+  fill: #E34F26;
+}
+
+.fill-\[\#E95420\]{
+  fill: #E95420;
+}
+
+.fill-\[\#F7DF1E\]{
+  fill: #F7DF1E;
+}
+
 .p-2{
   padding: 0.5rem;
+}
+
+.p-1{
+  padding: 0.25rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .px-\[30\%\]{
@@ -1014,8 +1155,8 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pl-\[15\%\]{
-  padding-left: 15%;
+.pl-\[15vw\]{
+  padding-left: 15vw;
 }
 
 .pt-5{
@@ -1026,8 +1167,8 @@ video {
   padding-top: 30%;
 }
 
-.pl-\[15vw\]{
-  padding-left: 15vw;
+.pt-\[50\%\]{
+  padding-top: 50%;
 }
 
 .text-3xl{
@@ -1068,9 +1209,9 @@ video {
   line-height: 1.5;
 }
 
-.text-white{
+.text-primary{
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(116 47 133 / var(--tw-text-opacity));
 }
 
 .text-secondary{
@@ -1078,17 +1219,27 @@ video {
   color: rgb(188 80 214 / var(--tw-text-opacity));
 }
 
-.text-primary{
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(116 47 133 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline{
   text-decoration-line: underline;
 }
 
+.opacity-0{
+  opacity: 0;
+}
+
 .opacity-50{
   opacity: 0.5;
+}
+
+.shadow-inner{
+  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-primary{
@@ -1098,6 +1249,14 @@ video {
 
 .outline{
   outline-style: solid;
+}
+
+.outline-white{
+  outline-color: #fff;
+}
+
+.outline-black{
+  outline-color: #000;
 }
 
 .filter{
