--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -582,32 +582,12 @@ video {
   inset: 9rem;
 }
 
-.inset-\[15\%_10vw_auto_auto\]{
-  inset: 15% 10vw auto auto;
-}
-
-.inset-\[15\%_5vw_auto_auto\]{
-  inset: 15% 5vw auto auto;
-}
-
-.inset-\[30\%_auto_auto_15vw\]{
-  inset: 30% auto auto 15vw;
-}
-
-.inset-\[30vh_auto_auto_15vw\]{
-  inset: 30vh auto auto 15vw;
-}
-
-.inset-\[70vh_auto_auto_15vw\]{
-  inset: 70vh auto auto 15vw;
-}
-
 .inset-\[50vh_auto_auto_15vw\]{
   inset: 50vh auto auto 15vw;
 }
 
-.inset-\[-15\%_5vw_auto_auto\]{
-  inset: -15% 5vw auto auto;
+.inset-\[60px_5vw_auto_auto\]{
+  inset: 60px 5vw auto auto;
 }
 
 .inset-y-1{
@@ -615,8 +595,24 @@ video {
   bottom: 0.25rem;
 }
 
+.bottom-0{
+  bottom: 0px;
+}
+
+.bottom-auto{
+  bottom: auto;
+}
+
 .left-0{
   left: 0px;
+}
+
+.left-auto{
+  left: auto;
+}
+
+.right-auto{
+  right: auto;
 }
 
 .top-0{
@@ -693,6 +689,14 @@ video {
   margin-right: 2rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
+.mt-auto{
+  margin-top: auto;
+}
+
 .block{
   display: block;
 }
@@ -733,12 +737,24 @@ video {
   height: 0.25rem;
 }
 
-.h-1\/2{
-  height: 50%;
+.h-\[25px\]{
+  height: 25px;
+}
+
+.h-\[30vh\]{
+  height: 30vh;
 }
 
 .h-\[60px\]{
   height: 60px;
+}
+
+.h-\[60vh\]{
+  height: 60vh;
+}
+
+.h-\[70px\]{
+  height: 70px;
 }
 
 .h-fit{
@@ -754,12 +770,8 @@ video {
   height: 100vh;
 }
 
-.h-\[25px\]{
-  height: 25px;
-}
-
-.h-1\/3{
-  height: 33.333333%;
+.h-\[50vh\]{
+  height: 50vh;
 }
 
 .w-0{
@@ -774,8 +786,8 @@ video {
   width: 50%;
 }
 
-.w-\[33vw\]{
-  width: 33vw;
+.w-\[25px\]{
+  width: 25px;
 }
 
 .w-\[36vw\]{
@@ -786,8 +798,12 @@ video {
   width: 50px;
 }
 
-.w-\[90\%\]{
-  width: 90%;
+.w-\[60vw\]{
+  width: 60vw;
+}
+
+.w-\[70px\]{
+  width: 70px;
 }
 
 .w-fit{
@@ -800,26 +816,6 @@ video {
 }
 
 .w-screen{
-  width: 100vw;
-}
-
-.w-\[50vw\]{
-  width: 50vw;
-}
-
-.w-\[75px\]{
-  width: 75px;
-}
-
-.w-\[25px\]{
-  width: 25px;
-}
-
-.w-\[60vw\]{
-  width: 60vw;
-}
-
-.w-\[100vw\]{
   width: 100vw;
 }
 
@@ -858,14 +854,6 @@ video {
 
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
-.grid-cols-\[repeat\(12\2c _minmax\(0\2c _1fr\)\)\]{
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
-.grid-cols-\[repeat\(15\2c _minmax\(0\2c _1fr\)\)\]{
-  grid-template-columns: repeat(15, minmax(0, 1fr));
 }
 
 .grid-rows-3{
@@ -948,12 +936,12 @@ video {
   white-space: nowrap;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .border{
@@ -991,9 +979,24 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-pink-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
+}
+
 .bg-red-500{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-secondary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(188 80 214 / var(--tw-bg-opacity));
 }
 
 .bg-transparent{
@@ -1005,85 +1008,44 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-secondary{
-  --tw-bg-opacity: 1;
-  background-color: rgb(188 80 214 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#131313\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(19 19 19 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#d9d9d9\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 217 217 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#d1d1d1\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 209 209 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#131518\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(19 21 24 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
-}
-
-.fill-\[\#00979D\]{
-  fill: #00979D;
-}
-
-.fill-\[\#00599C\]{
-  fill: #00599C;
-}
-
-.fill-\[\#239120\]{
-  fill: #239120;
-}
-
-.fill-\[\#1572B6\]{
-  fill: #1572B6;
-}
-
-.fill-\[\#092E20\]{
-  fill: #092E20;
-}
-
-.fill-\[\#000020\]{
-  fill: #000020;
-}
-
-.fill-\[\#2496ED\]{
-  fill: #2496ED;
-}
-
-.fill-\[\#F05032\]{
-  fill: #F05032;
-}
-
-.fill-\[\#181717\]{
-  fill: #181717;
-}
-
-.fill-\[\#61DAFB\]{
-  fill: #61DAFB;
 }
 
 .fill-\[\#000000\]{
   fill: #000000;
 }
 
+.fill-\[\#000020\]{
+  fill: #000020;
+}
+
 .fill-\[\#003B57\]{
   fill: #003B57;
 }
 
+.fill-\[\#00599C\]{
+  fill: #00599C;
+}
+
 .fill-\[\#007ACC\]{
   fill: #007ACC;
+}
+
+.fill-\[\#00979D\]{
+  fill: #00979D;
+}
+
+.fill-\[\#092E20\]{
+  fill: #092E20;
+}
+
+.fill-\[\#1572B6\]{
+  fill: #1572B6;
+}
+
+.fill-\[\#181717\]{
+  fill: #181717;
 }
 
 .fill-\[\#1F1E1E\]{
@@ -1092,6 +1054,14 @@ video {
 
 .fill-\[\#22314E\]{
   fill: #22314E;
+}
+
+.fill-\[\#239120\]{
+  fill: #239120;
+}
+
+.fill-\[\#2496ED\]{
+  fill: #2496ED;
 }
 
 .fill-\[\#336791\]{
@@ -1114,6 +1084,10 @@ video {
   fill: #5C3EE8;
 }
 
+.fill-\[\#61DAFB\]{
+  fill: #61DAFB;
+}
+
 .fill-\[\#E10098\]{
   fill: #E10098;
 }
@@ -1126,16 +1100,20 @@ video {
   fill: #E95420;
 }
 
+.fill-\[\#F05032\]{
+  fill: #F05032;
+}
+
 .fill-\[\#F7DF1E\]{
   fill: #F7DF1E;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
 .p-1{
   padding: 0.25rem;
+}
+
+.p-2{
+  padding: 0.5rem;
 }
 
 .p-4{
@@ -1167,20 +1145,8 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pl-\[15vw\]{
-  padding-left: 15vw;
-}
-
 .pt-5{
   padding-top: 1.25rem;
-}
-
-.pt-\[30\%\]{
-  padding-top: 30%;
-}
-
-.pt-\[50\%\]{
-  padding-top: 50%;
 }
 
 .text-3xl{
@@ -1244,6 +1210,10 @@ video {
   opacity: 0;
 }
 
+.opacity-10{
+  opacity: 0.1;
+}
+
 .opacity-50{
   opacity: 0.5;
 }
@@ -1263,12 +1233,12 @@ video {
   outline-style: solid;
 }
 
-.outline-white{
-  outline-color: #fff;
-}
-
 .outline-black{
   outline-color: #000;
+}
+
+.outline-white{
+  outline-color: #fff;
 }
 
 .blur{
@@ -1280,8 +1250,8 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.backdrop-blur-xl{
-  --tw-backdrop-blur: blur(24px);
+.backdrop-blur-\[2px\]{
+  --tw-backdrop-blur: blur(2px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
@@ -1292,8 +1262,8 @@ video {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
-.backdrop-blur-\[2px\]{
-  --tw-backdrop-blur: blur(2px);
+.backdrop-blur-xl{
+  --tw-backdrop-blur: blur(24px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
