--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1221,6 +1221,10 @@ video {
   padding-top: 1.25rem;
 }
 
+.text-center{
+  text-align: center;
+}
+
 .text-3xl{
   font-size: 1.875rem;
   line-height: 2.25rem;
