--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -598,6 +598,26 @@ video {
   inset: 47vh auto auto 15vw;
 }
 
+.inset-\[auto_auto_auto_auto\]{
+  inset: auto auto auto auto;
+}
+
+.inset-\[50vh_50vw_auto_auto\]{
+  inset: 50vh 50vw auto auto;
+}
+
+.inset-\[50vh_auto_auto_50vw\]{
+  inset: 50vh auto auto 50vw;
+}
+
+.inset-\[50vh_auto_auto_30vw\]{
+  inset: 50vh auto auto 30vw;
+}
+
+.inset-\[50vh_auto_auto_20vw\]{
+  inset: 50vh auto auto 20vw;
+}
+
 .inset-y-1{
   top: 0.25rem;
   bottom: 0.25rem;
@@ -794,6 +814,30 @@ video {
   height: 24px;
 }
 
+.h-96{
+  height: 24rem;
+}
+
+.h-1\/2{
+  height: 50%;
+}
+
+.h-\[10vh\]{
+  height: 10vh;
+}
+
+.max-h-\[10vh\]{
+  max-height: 10vh;
+}
+
+.max-h-\[50vh\]{
+  max-height: 50vh;
+}
+
+.min-h-screen{
+  min-height: 100vh;
+}
+
 .w-0{
   width: 0px;
 }
@@ -843,6 +887,46 @@ video {
   width: 24px;
 }
 
+.w-\[300px\]{
+  width: 300px;
+}
+
+.w-\[500px\]{
+  width: 500px;
+}
+
+.w-\[1\/3\]{
+  width: 1/3;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-1\/4{
+  width: 25%;
+}
+
+.flex-1{
+  flex: 1 1 0%;
+}
+
+.flex-shrink{
+  flex-shrink: 1;
+}
+
+.shrink{
+  flex-shrink: 1;
+}
+
+.flex-grow{
+  flex-grow: 1;
+}
+
+.grow{
+  flex-grow: 1;
+}
+
 .border-collapse{
   border-collapse: collapse;
 }
@@ -886,6 +970,10 @@ video {
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .place-items-center{
@@ -944,6 +1032,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-clip{
+  overflow: clip;
+}
+
 .overflow-visible{
   overflow: visible;
 }
@@ -958,6 +1050,10 @@ video {
 
 .overflow-x-scroll{
   overflow-x: scroll;
+}
+
+.text-ellipsis{
+  text-overflow: ellipsis;
 }
 
 .whitespace-nowrap{
@@ -1040,8 +1136,49 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50{
   --tw-bg-opacity: 0.5;
+}
+
+.bg-opacity-10{
+  --tw-bg-opacity: 0.1;
+}
+
+.bg-gradient-to-tr{
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-tl{
+  background-image: linear-gradient(to top left, var(--tw-gradient-stops));
+}
+
+.from-primary{
+  --tw-gradient-from: #742F85 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(116 47 133 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-accent{
+  --tw-gradient-from: #131518 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(19 21 24 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-accent{
+  --tw-gradient-to: #131518 var(--tw-gradient-to-position);
+}
+
+.to-primary{
+  --tw-gradient-to: #742F85 var(--tw-gradient-to-position);
+}
+
+.to-secondary{
+  --tw-gradient-to: #BC50D6 var(--tw-gradient-to-position);
 }
 
 .fill-\[\#000000\]{
@@ -1192,6 +1329,14 @@ video {
   padding: 1rem;
 }
 
+.p-10{
+  padding: 2.5rem;
+}
+
+.p-20{
+  padding: 5rem;
+}
+
 .px-\[30\%\]{
   padding-left: 30%;
   padding-right: 30%;
@@ -1217,8 +1362,44 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-\[10vw\]{
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
+
+.px-\[20vw\]{
+  padding-left: 20vw;
+  padding-right: 20vw;
+}
+
+.px-\[15vw\]{
+  padding-left: 15vw;
+  padding-right: 15vw;
+}
+
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
+}
+
+.pt-32{
+  padding-top: 8rem;
+}
+
+.pt-\[10vh\]{
+  padding-top: 10vh;
 }
 
 .text-center{
@@ -1255,8 +1436,32 @@ video {
   line-height: 1.75rem;
 }
 
+.text-9xl{
+  font-size: 8rem;
+  line-height: 1;
+}
+
+.text-7xl{
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .font-bold{
   font-weight: 700;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .leading-normal{
@@ -1278,6 +1483,21 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-accent{
+  --tw-text-opacity: 1;
+  color: rgb(19 21 24 / var(--tw-text-opacity));
+}
+
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .underline{
   text-decoration-line: underline;
 }
@@ -1297,6 +1517,12 @@ video {
 .shadow-inner{
   --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
