--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -542,6 +542,40 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .visible{
   visibility: visible;
 }
@@ -826,6 +860,22 @@ video {
   height: 10vh;
 }
 
+.h-\[200vh\]{
+  height: 200vh;
+}
+
+.h-\[100vh\]{
+  height: 100vh;
+}
+
+.h-\[300vh\]{
+  height: 300vh;
+}
+
+.h-\[400vh\]{
+  height: 400vh;
+}
+
 .max-h-\[10vh\]{
   max-height: 10vh;
 }
@@ -907,6 +957,27 @@ video {
   width: 25%;
 }
 
+.w-\[20vw\]{
+  width: 20vw;
+}
+
+.w-\[10vw\]{
+  width: 10vw;
+}
+
+.min-w-\[20vw\]{
+  min-width: 20vw;
+}
+
+.min-w-\[10vw\]{
+  min-width: 10vw;
+}
+
+.min-w-min{
+  min-width: -moz-min-content;
+  min-width: min-content;
+}
+
 .flex-1{
   flex: 1 1 0%;
 }
@@ -980,8 +1051,20 @@ video {
   place-items: center;
 }
 
+.content-start{
+  align-content: flex-start;
+}
+
+.content-stretch{
+  align-content: stretch;
+}
+
 .items-center{
   align-items: center;
+}
+
+.items-stretch{
+  align-items: stretch;
 }
 
 .justify-end{
