--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -685,6 +685,10 @@ video {
   top: auto;
 }
 
+.top-1\/2{
+  top: 50%;
+}
+
 .z-0{
   z-index: 0;
 }
@@ -907,6 +911,10 @@ video {
   height: 100vh;
 }
 
+.h-1\/3{
+  height: 33.333333%;
+}
+
 .max-h-0{
   max-height: 0px;
 }
@@ -1014,6 +1022,10 @@ video {
   width: 100vw;
 }
 
+.w-1\/3{
+  width: 33.333333%;
+}
+
 .min-w-0{
   min-width: 0px;
 }
@@ -1033,6 +1045,18 @@ video {
 
 .flex-\[4\]{
   flex: 4;
+}
+
+.flex-\[3\]{
+  flex: 3;
+}
+
+.flex-\[5\]{
+  flex: 5;
+}
+
+.flex-\[6\]{
+  flex: 6;
 }
 
 .flex-shrink{
@@ -1072,6 +1096,11 @@ video {
 
 .translate-y-1{
   --tw-translate-y: 0.25rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1119,6 +1148,10 @@ video {
 
 .place-items-center{
   place-items: center;
+}
+
+.place-items-baseline{
+  place-items: baseline;
 }
 
 .content-center{
@@ -1273,6 +1306,11 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-l-2xl{
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
 .border{
   border-width: 1px;
 }
@@ -1299,6 +1337,14 @@ video {
 
 .border-t-2{
   border-top-width: 2px;
+}
+
+.border-l{
+  border-left-width: 1px;
+}
+
+.border-r{
+  border-right-width: 1px;
 }
 
 .border-neutral-200{
@@ -1653,6 +1699,10 @@ video {
 
 .fill-white{
   fill: #fff;
+}
+
+.stroke-black{
+  stroke: #000;
 }
 
 .object-contain{
