added mobile under construction message, added projects page and bg, moved navbar up one dir

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -15,9 +15,27 @@ body {
       rgba(0, 0, 0, 0) 100%
     )
     no-repeat;
-    position: relative;
-    /* padding for footer */
-    padding-bottom: 30vh;
+  position: relative;
+  /* padding for footer */
+  padding-bottom: 30vh;
+}
+
+#mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 769px) {
+  #root {
+    display: none;
+  }
+
+  #mobile {
+    display: block;
+    color: white;
+    height: 100vh;
+    display: grid;
+    place-items: center;
+  }
 }
 
 /* make scrollbar invisible */
