--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1316,8 +1316,20 @@ video {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
+.grid-cols-5{
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
 .grid-rows-3{
   grid-template-rows: repeat(3, minmax(0, 1fr));
+}
+
+.grid-rows-4{
+  grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1494,6 +1506,10 @@ video {
 
 .rounded-3xl{
   border-radius: 1.5rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .rounded-l-2xl{
@@ -2043,6 +2059,16 @@ video {
   padding-right: 13%;
 }
 
+.px-20{
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-\[10vw\]{
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
+
 .pb-10{
   padding-bottom: 2.5rem;
 }
@@ -2426,6 +2452,24 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-500{
+  transition-duration: 500ms;
+}
+
+.duration-0{
+  transition-duration: 0s;
+}
+
+.duration-100{
+  transition-duration: 100ms;
+}
+
 body {
   background: #131518;
 }
@@ -2491,6 +2535,30 @@ body {
 
 .first\:border-t:first-child{
   border-top-width: 1px;
+}
+
+.odd\:bg-blue-500:nth-child(odd){
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.even\:bg-red-500:nth-child(even){
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.hover\:z-10:hover{
+  z-index: 10;
+}
+
+.hover\:scale-150:hover{
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:duration-500:hover{
+  transition-duration: 500ms;
 }
 
 .focus\:outline-none:focus{
