--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -18,23 +18,11 @@ body {
   padding-bottom: 30vh;
 }
 
-#mobile {
-  display: none;
-}
-
-@media only screen and (max-width: 769px) {
+/* @media only screen and (max-width: 769px) {
   #root {
     display: none;
   }
-
-  #mobile {
-    display: block;
-    color: white;
-    height: 100vh;
-    display: grid;
-    place-items: center;
-  }
-}
+} */
 
 /* make scrollbar invisible */
 ::-webkit-scrollbar {
