--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -580,20 +580,8 @@ video {
   inset: 50% auto auto 20vw;
 }
 
-.inset-\[50vh_auto_auto_15vw\] {
-  inset: 50vh auto auto 15vw;
-}
-
 .inset-\[60px_auto_auto_auto\] {
   inset: 60px auto auto auto;
-}
-
-.inset-\[60vh_auto_auto_15vw\] {
-  inset: 60vh auto auto 15vw;
-}
-
-.inset-\[90vh_auto_auto_15vw\] {
-  inset: 90vh auto auto 15vw;
 }
 
 .inset-\[70vh_auto_auto_15vw\] {
@@ -676,6 +664,10 @@ video {
   margin: 2.5rem;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -700,44 +692,16 @@ video {
   margin-left: 15%;
 }
 
-.ml-auto {
-  margin-left: auto;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.mt-24 {
-  margin-top: 6rem;
-}
-
 .mt-\[10vh\] {
   margin-top: 10vh;
-}
-
-.mb-auto {
-  margin-bottom: auto;
-}
-
-.mt-auto {
-  margin-top: auto;
-}
-
-.mt-\[40vh\] {
-  margin-top: 40vh;
 }
 
 .mt-\[5vh\] {
   margin-top: 5vh;
 }
 
-.ml-\[2vw\] {
-  margin-left: 2vw;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
+.block {
+  display: block;
 }
 
 .inline-block {
@@ -873,16 +837,16 @@ video {
   width: 30vh;
 }
 
-.w-\[36vw\] {
-  width: 36vw;
-}
-
 .w-\[50px\] {
   width: 50px;
 }
 
 .w-\[70px\] {
   width: 70px;
+}
+
+.w-\[70vw\] {
+  width: 70vw;
 }
 
 .w-\[90\%\] {
@@ -906,16 +870,9 @@ video {
   width: 100%;
 }
 
-.w-\[70vw\] {
-  width: 70vw;
-}
-
-.w-\[10vw\] {
-  width: 10vw;
-}
-
-.w-\[15vw\] {
-  width: 15vw;
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .w-min {
@@ -923,13 +880,12 @@ video {
   width: min-content;
 }
 
-.w-max {
-  width: -moz-max-content;
-  width: max-content;
-}
-
 .min-w-\[300px\] {
   min-width: 300px;
+}
+
+.max-w-\[100vw\] {
+  max-width: 100vw;
 }
 
 .flex-1 {
@@ -963,10 +919,6 @@ video {
 
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
-.grid-rows-3 {
-  grid-template-rows: repeat(3, minmax(0, 1fr));
 }
 
 .grid-rows-4 {
@@ -1017,6 +969,10 @@ video {
   gap: 10vh;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .self-start {
   align-self: flex-start;
 }
@@ -1027,6 +983,10 @@ video {
 
 .overflow-clip {
   overflow: clip;
+}
+
+.overflow-visible {
+  overflow: visible;
 }
 
 .overflow-y-scroll {
@@ -1122,12 +1082,26 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(47 54 133 / var(--tw-bg-opacity));
+}
+
+.bg-secondary {
+  --tw-bg-opacity: 1;
+  background-color: rgb(81 81 178 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
 
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
+}
+
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
 }
 
 .bg-gradient-to-b {
@@ -1325,6 +1299,10 @@ video {
   padding: 5vw;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1370,12 +1348,21 @@ video {
   padding-bottom: 10vh;
 }
 
+.px-\[5\%\] {
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
 
 .pb-\[10vh\] {
   padding-bottom: 10vh;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .pr-5 {
@@ -1398,16 +1385,16 @@ video {
   padding-top: 20vh;
 }
 
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
 .text-center {
   text-align: center;
 }
 
 .text-start {
   text-align: start;
+}
+
+.text-end {
+  text-align: end;
 }
 
 .text-2xl {
@@ -1427,11 +1414,6 @@ video {
 
 .text-7xl {
   font-size: 4.5rem;
-  line-height: 1;
-}
-
-.text-8xl {
-  font-size: 6rem;
   line-height: 1;
 }
 
@@ -1458,11 +1440,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -1565,6 +1542,12 @@ video {
           backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
+.backdrop-blur-lg {
+  --tw-backdrop-blur: blur(16px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1597,6 +1580,7 @@ body {
   position: relative;
   /* padding for footer */
   padding-bottom: 30vh;
+  overflow-x: clip;
 }
 
 /* @media only screen and (max-width: 769px) {
@@ -1662,14 +1646,6 @@ body {
     inset: 50vh auto auto 15vw;
   }
 
-  .lg\:mt-auto {
-    margin-top: auto;
-  }
-
-  .lg\:mt-0 {
-    margin-top: 0px;
-  }
-
   .lg\:ml-auto {
     margin-left: auto;
   }
@@ -1678,38 +1654,54 @@ body {
     margin-right: 2.5rem;
   }
 
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:grid {
     display: grid;
   }
 
-  .lg\:w-\[36vw\] {
-    width: 36vw;
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:w-1\/2 {
     width: 50%;
   }
 
+  .lg\:w-\[36vw\] {
+    width: 36vw;
+  }
+
   .lg\:grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
   }
 
-  .lg\:py-5 {
-    padding-top: 1.25rem;
-    padding-bottom: 1.25rem;
+  .lg\:overflow-hidden {
+    overflow: hidden;
+  }
+
+  .lg\:px-\[30\%\] {
+    padding-left: 30%;
+    padding-right: 30%;
   }
 
   .lg\:pl-0 {
     padding-left: 0px;
   }
 
-  .lg\:text-8xl {
-    font-size: 6rem;
+  .lg\:text-5xl {
+    font-size: 3rem;
     line-height: 1;
   }
 
-  .lg\:text-5xl {
-    font-size: 3rem;
+  .lg\:text-8xl {
+    font-size: 6rem;
     line-height: 1;
   }
 
