projects page is responsive

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -700,6 +700,10 @@ video {
   margin-top: 5vh;
 }
 
+.mb-\[20\%\] {
+  margin-bottom: 20%;
+}
+
 .block {
   display: block;
 }
@@ -921,8 +925,16 @@ video {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .grid-rows-4 {
   grid-template-rows: repeat(4, minmax(0, 1fr));
+}
+
+.grid-rows-8 {
+  grid-template-rows: repeat(8, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -1353,6 +1365,11 @@ video {
   padding-right: 5%;
 }
 
+.py-\[3vh\] {
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+}
+
 .pb-5 {
   padding-bottom: 1.25rem;
 }
@@ -1440,6 +1457,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -1658,6 +1680,10 @@ body {
     margin-top: 0px;
   }
 
+  .lg\:mb-\[10\%\] {
+    margin-bottom: 10%;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1678,8 +1704,16 @@ body {
     width: 36vw;
   }
 
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
   .lg\:grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-rows-4 {
+    grid-template-rows: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:overflow-hidden {
@@ -1689,6 +1723,11 @@ body {
   .lg\:px-\[30\%\] {
     padding-left: 30%;
     padding-right: 30%;
+  }
+
+  .lg\:py-\[10vh\] {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
   }
 
   .lg\:pl-0 {
@@ -1708,5 +1747,15 @@ body {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .lg\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
